Integrate topics 8-9 into README, plan and all revision aids
Adds the curriculum rows, exercise table entries, and 12 measured results
for D22-D27; 2 Core Cards to the cheatsheet; 49 flashcards; 5 mock-interview
questions (now 33, rescored); and 24 cram entries across the three decks.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01WQVEMmA5DRHFRJYc4mKJDC